# multimedia_image_framework

./: .gitignore  1.patch  123.patch  AGENTS.md  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  changes.patch  cpp_changes.diff  hisysevent.yaml
frameworks/innerkitsimpl/accessor/: BUILD.gn  libimage_accessor.versionscript
frameworks/innerkitsimpl/accessor/include/: abstract_exif_metadata_accessor.h  buffer_metadata_stream.h  data_buf.h  dng_exif_metadata_accessor.h  exif_metadata.h  exif_metadata_formatter.h  file_metadata_stream.h  heif_exif_metadata_accessor.h  jpeg_exif_metadata_accessor.h  metadata.h  metadata_accessor.h  metadata_accessor_factory.h  metadata_stream.h  png_exif_metadata_accessor.h  png_image_chunk_utils.h  tiff_exif_metadata.h  tiff_exif_metadata_accessor.h  tiff_parser.h  webp_exif_metadata_accessor.h  xmp_buffer_IO.h  xmp_metadata_accessor.h  xmp_metadata_impl.h  xmpsdk_xmp_metadata_accessor.h
frameworks/innerkitsimpl/accessor/src/: abstract_exif_metadata_accessor.cpp  blob_metadata.cpp  buffer_metadata_stream.cpp  data_buf.cpp  dng_exif_metadata_accessor.cpp  exif_metadata.cpp  exif_metadata_formatter.cpp  file_metadata_stream.cpp  fragment_metadata.cpp  gif_metadata.cpp  heif_exif_metadata_accessor.cpp  jpeg_exif_metadata_accessor.cpp  kv_metadata.cpp  metadata.cpp  metadata_accessor_factory.cpp  png_exif_metadata_accessor.cpp  png_image_chunk_utils.cpp  png_metadata_parser.cpp  tiff_exif_metadata.cpp  tiff_exif_metadata_accessor.cpp  tiff_parser.cpp  webp_exif_metadata_accessor.cpp  xmp_buffer_IO.cpp  xmp_metadata.cpp  xmp_metadata_accessor.cpp  xmp_metadata_accessor_factory.cpp  xmpsdk_xmp_metadata_accessor.cpp
frameworks/innerkitsimpl/egl_image/: BUILD.gn  post_proc.versionscript
frameworks/innerkitsimpl/egl_image/include/: pixel_map_egl_utils.h  pixel_map_from_surface.h  pixel_map_gl_common.h  pixel_map_gl_context.h  pixel_map_gl_post_proc_program.h  pixel_map_gl_resource.h  pixel_map_gl_scope.h  pixel_map_gl_shader.h  pixel_map_gl_utils.h  pixel_map_program_manager.h  pixel_map_program_manager_utils.h  render_context.h
frameworks/innerkitsimpl/egl_image/src/: pixel_map_from_surface.cpp  pixel_map_gl_context.cpp  pixel_map_gl_post_proc_program.cpp  pixel_map_gl_shader.cpp  pixel_map_program_manager.cpp  render_context.cpp
frameworks/innerkitsimpl/pixelconverter/: BUILD.gn
frameworks/innerkitsimpl/pixelconverter/include/: pixel_convert_adapter.h  pixel_map_jni_utils.h
frameworks/innerkitsimpl/pixelconverter/src/: pixel_convert_adapter.cpp
frameworks/innerkitsimpl/test/: BUILD.gn
frameworks/innerkitsimpl/test/fuzztest/: BUILD.gn
frameworks/innerkitsimpl/test/unittest/: HeifDecoderImpl_test.cpp  attr_data_test.cpp  auxiliary_generator_test.cpp  avif_decode_test.cpp  basic_transformer_test.cpp  blob_metadata_test.cpp  bmp_decoder_test.cpp  buffer_source_stream_test.cpp  color_converter_test.cpp  color_utils_test.cpp  cr3_box_test.cpp  cr3_format_agent_test.cpp  cr3_parser_test.cpp  dng_exif_metadata_test.cpp  dng_sdk_helper_test.cpp  dng_sdk_info_test.cpp  egl_image_helper_test.cpp  egl_image_test.cpp  egl_image_test2.cpp  exif_maker_note_test.cpp  file_source_stream_test.cpp  format_agent_plugin_src_test.cpp  format_agent_plugin_svg_test.cpp  format_agent_plugin_test.cpp  gif_decoder_test.cpp  hdr_helper_test.cpp  heif_decode_impl_test.cpp  heif_exif_metadata_accessor_test.cpp  heif_format_agent_test.cpp  heif_parser_box_test.cpp  heif_parser_test.cpp  heif_stream.test.cpp  heif_yuv_test.cpp  hispeed_image_manager_test.cpp  image_color_space_test.cpp  image_common_ndk_test.cpp  image_creator_manager_test.cpp  image_creator_mock_test.cpp  image_creator_test.cpp  image_data_statistics_test.cpp  (+83 more)
frameworks/innerkitsimpl/utils/: BUILD.gn
frameworks/innerkitsimpl/utils/include/: color_utils.h  hdr_type.h  hispeed_image_manager.h  image_convert_tools.h  image_data_statistics.h  image_dfx.h  image_format.h  image_func_timer.h  image_fwk_ext_manager.h  image_handle.h  image_holder_manager.h  image_log.h  image_system_properties.h  image_trace.h  image_type_converter.h  image_utils.h  pixel_yuv_ext_utils.h  pixel_yuv_utils.h  vpe_utils.h  xmp_helper.h
frameworks/innerkitsimpl/utils/src/: color_utils.cpp  hispeed_image_manager.cpp  image_convert_tools.cpp  image_data_statistics.cpp  image_dfx.cpp  image_func_timer.cpp  image_fwk_ext_manager.cpp  image_handle.cpp  image_system_properties.cpp  image_trace.cpp  image_type_converter.cpp  image_utils.cpp  pixel_yuv_ext_utils.cpp  pixel_yuv_utils.cpp  vpe_utils.cpp  xmp_helper.cpp
frameworks/kits/ani/: BUILD.gn  arktsconfig.json
frameworks/kits/ani/ets/: imageTest.ets  (+1 more)
frameworks/kits/cj/: BUILD.gn  cj_image_ffi.map
frameworks/kits/taihe/: BUILD.gn  image_taihe.versionscript
ide/: BUILD.gn  image_decode_config.gni
interfaces/innerkits/: BUILD.gn  libimage_native.versionscript
interfaces/innerkits/include/: auxiliary_generator.h  auxiliary_picture.h  avis_metadata.h  blob_metadata.h  decode_listener.h  exif_metadata.h  fragment_metadata.h  gif_metadata.h  heifs_metadata.h  image_format_convert.h  image_mime_type.h  image_native_interface_utils.h  image_packer.h  image_source.h  image_type.h  incremental_pixel_map.h  jfif_metadata.h  kv_metadata.h  log_tags.h  media_errors.h  metadata.h  modules.h  native_image.h  peer_listener.h  picture.h  pixel_astc.h  pixel_map.h  pixel_map_manager.h  pixel_map_parcel.h  pixel_yuv.h  pixel_yuv_ext.h  png_metadata.h  png_metadata_parser.h  rfdatab_metadata.h  webp_metadata.h  xmp_metadata.h  xmp_metadata_impl.h  xtstyle_metadata.h
mock/native/: BUILD.gn
mock/native/include/: directory_ex.h  errors.h  hitrace_meter.h  message_parcel.h  nocopyable.h  parcel.h  refbase.h  rwlock.h  singleton.h  string_ex.h
mock/native/src/: HiLog.cpp  directory_ex.cpp  hitrace_meter.cpp  message_parcel.cpp  parcel.cpp  refbase.cpp  rwlock.cpp  string_ex.cpp
plugins/cross/: image_native_android.gni  image_native_ios.gni
plugins/manager/: BUILD.gn  cfi_blocklist.txt
plugins/manager/include/: plugin_server.h
plugins/manager/src/: plugin_server.cpp
(+1077 files in other folders)
