# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# source code for Windows.
use_mingw_win = "${current_os}_${current_cpu}" == "mingw_x86_64"
use_clang_mac = "${current_os}_${current_cpu}" == "mac_x64"
use_clang_ios = current_os == "ios" || current_os == "tvos"
use_clang_android = current_os == "android"

# Toolchain
windows_buildtool = "//build/toolchain/mingw:mingw_x86_64"
mac_buildtool = "//build/toolchain/mac:clang_x64"

# Defines
image_decode_windows_defines = [ "_WIN32" ]
image_decode_mac_defines = [ "_APPLE" ]
image_decode_ios_defines = [ "_IOS" ]
image_decode_android_defines = [ "_ANDROID" ]
